# svg2tikz

./: CHANGELOG.md  pylintrc  pyproject.toml
.github/workflows/: build_docs.yml  tests_docs.yml
svg2tikz/: tikz_export.py
tests/: test_complete_files.py  test_tikz_path_exporter.py
tests/testfiles/: R_letter_with_arc.tex  attribute_texmode.tex  blocs_and_groups.tex  circle.tex  circle_verbose.tex  crop.tex  curves.tex  display_none_in_group.tex  ellipse.tex  ellipse_noreversey.tex  gradient.tex  image.tex  line.tex  lines_style.tex  nodes_and_transform.tex  pentagone_round_corner.tex  polylines_polygones.tex  rectangle.tex  rectangle_wrap.tex  s_command_letter.tex  s_command_no_previous_bezier.tex  sub_superscript_ascii.tex  sub_superscript_latex.tex  switch_simple_noverbose.tex  switch_simple_verbose.tex  symbol_and_use.tex  text.tex  text_fill_color.tex  text_noreversey.tex  transform.tex  transform_noreversey.tex
