[tool.poetry]
name = "svg2tikz"
version = "3.3.4"
description = "Tools for converting SVG graphics to TikZ/PGF code"
authors = ["ldevillez <louis.devillez@gmail.com>", " Kjell Magne Fauske <kjellmf@gmail.com>"]
maintainers = ["ldevillez <louis.devillez@gmail.com>"]
license = "GPL-2.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<4.0"
lxml = "^5.1.1"
inkex = "==1.4.0"
pygobject= "==3.50.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=9.1.0"
sphinx-copybutton = ">=0.5.2"
furo = ">=2025.12.19"
sphinx-argparse = ">=0.5.2"
inkex = "==1.4.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.1,<25.0"
pylint = ">=2.16.2"
coverage = ">=7.5.1"


[[tool.poetry.source]]
name = "inkex_gitlab"
url = "https://gitlab.com/api/v4/projects/40060814/packages/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
svg2tikz = "svg2tikz.tikz_export:main_cmdline"
